Update OG meta tags with production URL

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://dhamdrishti.vercel.app/">
+    <meta property="og:url" content="https://vadodara-flood-archives.vercel.app/">
     <meta property="og:title" content="Vadodara Flood Archives 🌧️">
     <meta property="og:description"
         content="Is your society in a Red Zone? Check historical flood data and run risk simulations for 50+ verified locations.">
-    <meta property="og:image" content="https://dhamdrishti.vercel.app/social-preview.png">
+    <meta property="og:image" content="https://vadodara-flood-archives.vercel.app/social-preview.png">
     <meta property="og:locale" content="en_IN">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://dhamdrishti.vercel.app/">
+    <meta property="twitter:url" content="https://vadodara-flood-archives.vercel.app/">
     <meta property="twitter:title" content="Vadodara Flood Archives 🌧️">
     <meta property="twitter:description"
         content="Is your society in a Red Zone? Check historical flood data and run risk simulations.">
-    <meta property="twitter:image" content="https://dhamdrishti.vercel.app/social-preview.png">
+    <meta property="twitter:image" content="https://vadodara-flood-archives.vercel.app/social-preview.png">
 
     <!-- Theme Color -->
     <meta name="theme-color" content="#0a0a0a">
