Implement 3-Step Draggable Sidebar (12vh/40vh/90vh) with specific drag handle physics

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                 <span class="icon">📍</span>
                 Am I Safe?
             </button>
-            <!-- Mobile Collapse Handle -->
-            <div class="sidebar-collapse-handle" onclick="toggleSidebar()">
-                <div class="handle-bar"></div>
+            <!-- Drag Handle Area -->
+            <div id="drag-handle-area">
+                <div class="drag-pill"></div>
             </div>
 
             <div class="sidebar-content">
