--- a/index.html
+++ b/index.html
@@ -215,11 +215,13 @@
 
             <div class="modal-body">
                 <p style="color: #ccc; font-size: 0.9rem; margin-bottom: 1rem;">
-                    Help your neighbors! Your report will be verified and added to the map within 1 hour.
+                    Your report will be verified and added to the map.
                 </p>
 
-                <iframe src="https://tally.so/embed/YOUR_FORM_ID?alignLeft=1&hideTitle=1&transparentBackground=1"
-                    width="100%" height="400" frameborder="0" marginheight="0" marginwidth="0" title="Flood Report">
+                <iframe
+                    src="https://tally.so/embed/rjO0j5?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
+                    width="100%" height="400" frameborder="0" marginheight="0" marginwidth="0"
+                    title="Vadodara Flood Report">
                 </iframe>
             </div>
         </div>
