--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 
         <!-- Floating Glass Sidebar -->
         <aside class="glass-sidebar" id="sidebar">
-            <button id="locateBtn" class="fab-locate">
+            <button id="locateBtn" class="fab-locate" aria-label="Find my location and check flood risk">
                 <span class="icon">📍</span>
                 Am I Safe?
             </button>
             <!-- Drag Handle Area -->
-            <div id="drag-handle-area">
+            <div id="drag-handle-area" aria-label="Drag to resize sidebar" role="button" tabindex="0">
                 <div class="drag-pill"></div>
             </div>
 
@@ -98,8 +98,7 @@
                             <h1 data-i18n="appTitle">Flood Archives</h1>
                             <p data-i18n="appSubtitle">Vadodara Risk Intelligence</p>
                         </div>
-                        <button id="langToggle" class="lang-toggle" onclick="toggleLanguage()"
-                            title="Switch to Gujarati">ગુ</button>
+                        <button id="langToggle" class="lang-toggle" title="Switch to Gujarati">ગુ</button>
                     </div>
                 </div>
 
@@ -201,7 +200,7 @@
     </div>
 
     <!-- Report Flood Button -->
-    <button id="report-btn" onclick="openReportModal()">
+    <button id="report-btn" aria-label="Report a flood in your area">
         <span>📢</span> Report Flood
     </button>
 
@@ -210,7 +209,7 @@
         <div class="modal-content glass-panel">
             <div class="modal-header">
                 <h3>📢 Submit Live Report</h3>
-                <button class="close-btn" onclick="closeReportModal()">×</button>
+                <button class="close-btn" aria-label="Close modal">×</button>
             </div>
 
             <div class="modal-body">
