--- a/index.html
+++ b/index.html
@@ -194,6 +194,16 @@
                 <span class="legend-river"></span>
                 <span>Vishwamitri</span>
             </div>
+            <div class="legend-item"
+                style="margin-top: 0.5rem; padding-top: 0.5rem; border-top: 1px solid var(--glass-border);">
+                <span class="legend-dot" style="background: #a855f7;"></span>
+                <span>Community Reports</span>
+                <button id="community-toggle"
+                    style="margin-left: 8px; padding: 2px 8px; font-size: 0.7rem; background: rgba(168,85,247,0.2); border: 1px solid #a855f7; border-radius: 4px; color: #a855f7; cursor: pointer;"
+                    aria-label="Toggle community reports layer">
+                    👁️ Hide
+                </button>
+            </div>
         </div>
     </div>
 
@@ -265,6 +275,24 @@
     <script src="translations.js"></script>
     <script src="app.js"></script>
     <script>
+        // Service Worker Registration (Progressive Web App)
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/sw.js')
+                    .then((registration) => {
+                        console.log('✅ Service Worker registered:', registration.scope);
+
+                        // Check for updates every 24 hours
+                        setInterval(() => {
+                            registration.update();
+                        }, 86400000);
+                    })
+                    .catch((error) => {
+                        console.warn('Service Worker registration failed:', error);
+                    });
+            });
+        }
+
         // Initialize language on page load
         document.addEventListener('DOMContentLoaded', initLanguage);
     </script>
