--- a/index.html
+++ b/index.html
@@ -38,6 +38,30 @@
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
+    <!-- Critical CSS - Inline to prevent map gray screen race condition -->
+    <style>
+        /* Ensure map has size before main CSS loads */
+        #map {
+            height: 100vh;
+            width: 100%;
+            background: #0a0a0a;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+        html {
+            height: 100%;
+        }
+    </style>
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="style.css">
