Fix: Remove Am I Safe, Repair Community Reports, and Upgrade UI

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <!-- NUCLEAR A - CACHE BUSTER SCRIPT (Force Update) -->
     <script>
-        const CURRENT_VERSION = 'v9-hotfix';
+        const CURRENT_VERSION = 'v11-ui-fix';
         const lastVersion = localStorage.getItem('app_version');
 
         if (lastVersion !== CURRENT_VERSION) {
@@ -326,9 +326,9 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="data.js"></script>
-    <script src="translations.js"></script>
-    <script src="app.js"></script>
+    <script src="data.js?v=12"></script>
+    <script src="translations.js?v=12"></script>
+    <script src="app.js?v=12"></script>
     <script>
         // Service Worker Registration (Progressive Web App)
         if ('serviceWorker' in navigator) {
