Legal: Stronger disclaimer

--- a/index.html
+++ b/index.html
@@ -121,19 +121,25 @@
                 <h2>⚠️ Legal Disclaimer</h2>
             </div>
             <div class="modal-body">
-                <p><strong>This is a public research archive, NOT an official flood warning system.</strong></p>
-
-                <ul>
-                    <li><strong>No Guarantee:</strong> Based on historical data (2019-2025). Past flooding does NOT
-                        guarantee future safety or risk.</li>
-                    <li><strong>Not for Real Estate:</strong> Do NOT use as sole criterion for property decisions.</li>
-                    <li><strong>No Liability:</strong> The creator assumes NO liability for damages from reliance on
-                        this information.</li>
-                    <li><strong>Official Sources:</strong> For evacuation orders, contact VMC directly.</li>
-                </ul>
-
-                <p style="color: var(--text-muted); font-size: 0.85rem;">By continuing, you acknowledge this is a
-                    <em>community research tool</em> and not a substitute for official alerts.
+                <p style="text-transform: uppercase; color: #ef4444; font-weight: bold; font-size: 0.9rem;">
+                    Strictly for informational & research purposes only.
+                </p>
+                <div
+                    style="background: rgba(255,255,255,0.05); padding: 12px; border-radius: 8px; font-size: 0.9rem; margin: 12px 0;">
+                    <ul>
+                        <li><strong>Not Official:</strong> This app is NOT affiliated with VMC, Govt of Gujarat, or
+                            Disaster Management Authorities.</li>
+                        <li><strong>No Liability:</strong> The creators accept <strong>NO LIABILITY</strong> for any
+                            loss, damage, or injury resulting from the use of this data.</li>
+                        <li><strong>Volunteer Effort:</strong> Data is crowdsourced and archive-based. It may contain
+                            inaccuracies.</li>
+                        <li><strong>Do Not Rely:</strong> Do NOT use this tool for critical safety decisions, real
+                            estate valuation, or emergency navigation.</li>
+                    </ul>
+                </div>
+                <p style="font-size: 0.85rem; color: #aaa;">
+                    For official alerts and emergency assistance, always contact local authorities (VMC/Fire Dept)
+                    directly.
                 </p>
             </div>
             <div class="modal-actions">
