Fix: Service Worker path for Android WebView

--- a/index.html
+++ b/index.html
@@ -417,7 +417,8 @@
         // Service Worker Registration (Progressive Web App)
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
+                // Use relative path for Android WebView compatibility
+                navigator.serviceWorker.register('./sw.js')
                     .then((registration) => {
                         console.log('✅ Service Worker registered:', registration.scope);
 
