--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <meta name="theme-color" content="#0a0a0a">
     <meta name="msapplication-TileColor" content="#0a0a0a">
 
+    <!-- PWA / Android Assets -->
+    <link rel="manifest" href="./manifest.json">
+    <link rel="icon" type="image/png" href="./social-preview.png">
+
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
